Update on Overleaf.

--- a/ExSummary.tex
+++ b/ExSummary.tex
@@ -22,7 +22,8 @@ precipitation. The ozone network consisted of 141 sites, particulate matter was 
 68 sites, of which 44 performed measurements of both \PM[10] and \PM[2.5]. 
 In addition, 56 sites from 21 Parties reported at least one of the components required in the advanced EMEP measurement program (level 2). However, very few sites provided a complete level 2 program, i.e. only 12 sites have implemented all the required aerosol parameters. 
 
-The mean daily max O$_3$, SOMO35 and AOT40 all show a distinct gradient with levels increasing from north to south, a well established feature for ozone reflecting the dependency of ozone on the photochemical conditions. The geographical pattern in the measured values is fairly well reflected by the model results for all these three metrics.
+The mean daily max O$_3$, SOMO35 and AOT40 all show a distinct gradient with levels increasing from north to south, a well established feature for ozone reflecting the dependency of ozone on the photochemical conditions. The geographical pattern in the measured values is fairly well reflected by the model results for all these three metrics. Peak levels of surface O$_3$ were high in 2019 and this was linked to extreme heat waves in June and July. The national temperature records were broken in France, United Kingdom and Germany this year and associated with these episodes very high ozone levels were observed. Some stations registered the highest peak ozone levels since the mid 1990s. Many countries reported levels above EU's information threshold (180 \ug) and some even above the alert threshold (240 \ug). This confirms the strong link between weather conditions and surface ozone and is a signal that future climate change could have a substantial influence on the frequency and intensity of ozone episodes in Europe.
+
 %Svetlana & Wenche update:
 PM pollution was rather moderate in 2018, in particular in Central, Western and Southern Europe (10-30\% lower compared to the 18-year average) due to the relatively mild winter and more precipitation. Only in Turkey, the Caucasus region, Ukraine, the Baltic countries and southern parts of Finland and Sweden, \PM[10] and \PM[2.5] levels were higher. 
 EMEP MSC-W model calculations and EMEP observations show a general increase of annual mean \PM[10] and \PM[2.5] over land from north to south, with concentrations being below 2-5 \ug in Northern
@@ -43,7 +44,7 @@ The majority of PM exceedances occurred during the winter and autumn 2018 at Cen
 
 
 
-%Something about ozone, Sverre
+%Something about ozone, Sverre - Added text for 2019 above. 
 
 %Something about wet dep, Hilde
 
@@ -62,6 +63,8 @@ The majority of PM exceedances occurred during the winter and autumn 2018 at Cen
 \subsubsection*{Status of emission reporting}
 In 2021, 48 out of 51 Parties (94$\%$) submitted emission inventories to the EMEP Centre on Emission Inventories and Projections (CEIP), and 42 Parties reported black carbon (BC) emissions. As 2021 is a reporting year for large point sources (LPS) and gridded emissions, 32 Parties reported information on LPS while 26 Parties reported gridded data. The quality of reported emission data differs significantly across countries, and the uncertainty of the data is considered to be relatively high.
 
+After the first round of submissions in 2017, 2021 was the second year for which EMEP countries were obliged to report gridded emissions in  0.1{\degrees}$\times$0.1{\degrees} lon\-gi\-tude/la\-ti\-tude resolution. Until June 2021, 34 of the 48 countries which are considered to be part of the EMEP area reported sectoral gridded emissions in this resolution. For remaining areas, missing emissions are gap-filled and spatially distributed using expert estimates.
+
 Estimates of PM emissions as currently provided by Parties have a number of major uncertainties, and there is a clear need for clarification and standardisation of the methods used to define and report PM emissions. 
 Previous work has clearly shown that the definitions behind national emission estimates are inconsistent in their treatment of condensable organics: some countries explicitly do not include condensables in their PM inventories, some likely include condensables and for some it is mixed or unclear.
 
@@ -77,97 +80,50 @@ In 2021, CEIP in co-operation with TNO prepared a list of Parties where it could
 
 %The assessment of the air quality situation in Europe and the source receptor calculations for 2019 made this year have been conducted with the EMEPwREF2.1C emission dataset.
 %official EMEP emissions combined with TNO REF2.1 emissions for the GNFR sector C for PM (EMEPwREF2.1C). 
-The 1999 Gothenburg Protocol lists emission reduction commitments of NO$_x$, SO$_x$, NH$_3$ and NMVOCs for most of the Parties to the LRTAP Convention for the year 2010\COMMENT{WHY DO THEY TALK ABOUT THE 2010 targets and not the 2020 targets?Should we include this?}. These commitments should not be exceeded in 2010 nor in subsequent years. When considering only reported data, approved adjustments and fuel use data of the respective countries, it can be seen that in the year 2019 North Macedonia could not reduce their \sox emissions below their respective Gothenburg Protocol requirements, and that Croatia and Spain are above their 1999 Gothenburg Protocol ceilings concerning \nhiii. For \nox and NMVOC all countries were below their individual ceilings in year 2019.
-
-After the first round of submissions in 2017, 2021 was the second year for which EMEP countries were obliged to report gridded emissions in  0.1{\degrees}$\times$0.1{\degrees} lon\-gi\-tude/la\-ti\-tude resolution. Until June 2021, 34 of the 48 countries which are considered to be part of the EMEP area reported sectoral gridded emissions in this resolution. For remaining areas, missing emissions are gap-filled and spatially distributed using expert estimates.
-
-Emissions from international shipping in different European seas were estimated based on the CAMS global shipping emission dataset for the year 2019.
-
-\subsubsection*{Trends in air pollution}
-Short summary of the chapter
-
-%\subsubsection*{Condensable organics: model evaluation and source receptor matrices for 2018}
-%Estimates of PM emissions as currently provided by Parties have a number of major uncertainties, and there is a clear need for clarification and standardisation of the methods used to define and report PM emissions. 
-%Previous work has clearly shown that the definitions behind national emission estimates are inconsistent in their treatment of condensable organics: some countries explicitly do not include condensables in their PM inventories, some likely include condensables and for some it is mixed or unclear. 
-%In 2019 and 2020, Parties were asked to include a table with information on the condensable component in their reporting of PM emissions. This year, 21 Parties provided such information. 
-%The treatment of condensable organics in emission factors is best known for the emissions from the energy sector and road transport, while it is less clear for small-scale combustion, which is one of the sources where the largest impact on the emission factor occur.
-
-%In March 2020, MSC-W hosted an expert workshop on condensables (funded
-%by the Nordic Council of Ministers (NMR)), which brought together experts
-%in emissions, measurements, inventories, and policy from Europe and
-%North America, and created a much better understanding of the issues and
-%possible approaches for dealing with this important class of compounds.
-%Discussions at the NMR workshop confirmed that even when countries did include condensables, there were significant differences in the methodologies used. Furthermore, the workshop agreed that as a first step the TNO Ref2 emissions
-%for GNFR\footnote{Gridded Nomenclature For Reporting, an aggregated version of NFR (Nomenclature For Reporting) sectors used by the Parties in reporting to the LRTAP Convention} sector C (where condensables are added to small-combustion
-%emissions in a harmonised way) is a good
-%first no-regret step for describing condensable emissions in atmospheric
-%dispersion modelling. The EMEP Bureaux decided that EMEP MSC-W should make use of the Ref2 emissions for condensable organics in order to produce more consistent model results.
-
-%Therefore, the assessment of the air quality situation in Europe and source receptor calculations for 2018 made this year, have been conducted with official EMEP emissions combined with TNO Ref2 emissions for the GNFR sector C for PM (EMEPwRef2C). These model results, and in addition model results using officially reported PM emissions, have been compared to EMEP and EEA observations - showing improved performance for \PM[2.5], especially in wintertime, in the case where condensables are consistently included. 
-
-%The improvement was seen for most countries, although as expected, the extent of the change depends on the country and location (and the methods used to define PM emissions in nearby countries). 
-%Although there is good evidence for the basic concepts which are applied here, many of the assumptions are very uncertain, even by the standards of organic aerosol modelling in general.
-
-%For some countries (e.g. Norway, Bulgaria, Italy), the EMEPwRef2C and EMEP estimates of \PM[2.5] emissions
-%are comparable, but for others (e.g. Austria, Estonia, France, Germany, the Netherlands and Switzerland) the EMEPwRef2C estimate is far higher than the reported
-%emissions. For a few countries EMEPwRef2C is lower (e.g. Croatia, Hungary). In order to estimate the impact of such differences on source-receptor matrices we
-%have calculated the changes in country-to-itself and import-to-country for \PM[2.5] for all the Parties, using the two different emission estimates. 
-%The changes in \PM[2.5] and especially \ppmfine were quite sensitive
-%to the different emission setups, with differences in country-to-itself contributions up to a factor 5 for \ppmfine, and up to a factor 2 for \PM[2.5], but varying greatly from country to country.
-
-%It is clear that the current situation, in which some countries include and others exclude condensables, is 
-%very problematic, and leads to inconsistent and unfair source-receptor matrices. 
-%Recent activities to better document and understand the current situation 
-%have led to a greater understanding of the issues among different expert communities. One of
-%the main conclusions of the NMR workshop is that although these initial calculations with the EMEPwRef2C data are a good first step towards a harmonised emission methodology, 
-%these expert estimates should be increasingly replaced by national estimates once procedures for dealing with condensables in a more harmonised way are agreed on and implemented. Such improvements will need detailed discussion among the emission inventory communities (e.g. TFEIP, TFTEI, national experts) as well as with modellers who will have to account for the complex volatility issues surrounding the condensables and associated issues.
-
-%\subsubsection*{Elemental carbon: model evaluation and source receptor matrices for 2018}
-%It is well known that current reporting of black carbon (BC) to CLRTAP suffer from a number of critical deficiencies, and that the uncertainties in estimated BC emissions are large.
-%In this report, we present model calculations for 2018 using both the reported EMEP BC emissions (assuming that the reported BC is elemental carbon (EC) for all countries) and an EC emission inventory which is partly derived from the TNO Ref2 bottom-up estimate (corresponding to EMEPwRef2C discussed in the previous section).
-%The EMEP MSC-W model results were compared with EMEP observations of EC. Annual mean EC in \PM[2.5] is underestimated by 26\% in
-%the model run based on officially reported emissions, whereas it is overestimated by 24\% in the model run using EMEPwRef2C (with corresponding biases for the winter of -31\% and +33\%).
-%From the model evaluation presented here it is not possible to judge which of the emission data sets is the most `correct' one, but the results are very different for many countries.
-
-%Source-receptor calculations have been performed for both emission scenarios.
-%We demonstrate that the differences in the emission estimates of EC lead to up to a factor of 2-4 differences in country-to-itself and import-to-country contributions to EC concentrations.
-
-%\subsubsection*{The EMEP Intensive Measurement Period (IMP) 2017/18: Equivalent Black Carbon (EBC) from fossil fuel and biomass burning sources}
-%We present an overview of data from the EMEP IMP 2017/18 and source apportionment (fossil fuel and wood burning equivalent black carbon, \EBCff and \EBCbb, respectively), using positive matrix factorization (PMF). The advantage of the PMF approach to EBC source apportionment is that an a priori knowledge of the aerosol {\AA}ngstr{\"o}m exponent (AAE) is not required (rather, AAEs are an output derived from factor profiles). PMF consistently produced 2 factors with profiles of \AAEff and \AAEbb. Time series of the PMF factors exhibit clear diurnal patterns for the urban sites, with \AAEff showing a morning and an evening peak, while \AAEbb mainly peaks in the evening. For the background sites there is typically a low diurnal variation as they are likely more affected by long-range transported (LRT) emissions than local emissions. The \EBCbb contribution at sites that are mostly influenced by LRT (34 $\pm$ 10\%) was marginally lower than at sites dominated by local emissions (39 $\pm$ 8\%) and shows that biomass burning contributes significantly to background EBC, i.e. \EBCbb air pollution is a regional as well as a local problem. We also provide an overview of the data that are available to the community on request.
+The 1999 Gothenburg Protocol lists emission reduction commitments of NO$_x$, SO$_x$, NH$_3$ and NMVOCs for most of the Parties to the LRTAP Convention for the year 2010\COMMENT{WHY DO THEY TALK ABOUT THE 2010 targets and not the 2020 targets?Should we include this at all in the Summary?}. These commitments should not be exceeded in 2010 nor in subsequent years. When considering only reported data, approved adjustments and fuel use data of the respective countries, it can be seen that in the year 2019 North Macedonia could not reduce their \sox emissions below their respective Gothenburg Protocol requirements, and that Croatia and Spain are above their 1999 Gothenburg Protocol ceilings concerning \nhiii. For \nox and NMVOC all countries were below their individual ceilings in year 2019.
 
 
-%\subsubsection*{Downscaling of PM and \noii in Europe using uEMEP}
-%Over the past four years EMEP MSC-W has been developing and implementing a downscaling methodology to enhance the capabilities of the EMEP MSC-W chemical transport model in Europe. This downscaling model is known as uEMEP (urban EMEP) and can achieve high resolution air quality modelling down to 100 m for entire countries. It is here applied to calculate annual mean NO$_{2}$, PM$_{2.5}$ and PM$_{10}$ concentrations for all of Europe at 100 m resolution and is validated against all available EEA monitoring stations in Europe (including traffic stations) at 25 m resolution. The downscaling shows significant improvement in NO$_{2}$ concentrations where spatial correlation has been doubled for most countries and bias reduced from -46\% to -17\% for all stations in Europe. The downscaling of PM$_{2.5}$ and PM$_{10}$ does not show improvement in spatial correlation but does reduce the overall bias in the European calculations from -28\% to -17\% and -43\% to -30\% for PM$_{2.5}$ and PM$_{10}$ respectively. Sensitivity tests in Norway show that improvements in the emission and emission proxy data used for the downscaling can significantly improve the PM results but more effort is required to improve PM downscaling across Europe. The downscaling development opens the way for improved exposure estimates, improved assessment of emissions as well as detailed calculations of source contributions to exceedances in a consistent way for all of Europe at high resolution.
+
+%Emissions from international shipping in different European seas were estimated based on the CAMS global shipping emission dataset for the year 2019.
+
+\subsubsection*{Trends in air pollution 2000-2019}
+In December 2019, the Executive Body launched the review of the Gothenburg Protocol as amended in 2012. In order to support the review and assess the progress made towards achieving the environmental and health objectives of the Protocol, we present an assessment of the trends in air pollution in Europe for the period 2000-2019 based on long term observational data from the EMEP network as well as EMEP MSC-W model calculations.
+We analyze trends in air quality for ozone, sulphur dioxide, particulate matter (and their species; sulphate, nitrate, ammonium, elemental carbon and organic carbon), oxidized and reduced nitrogen as well as wet deposition of sulphur and nitrogen species. In addition, we present trends in some indicators of health and vegetation risk (SOMO35, exceedances of WHO guideline values for PM$_{2.5}$, AOT40 for forests and crops, and exceedances of critical loads for acidification and eutrophication for every 5 year since 2000)
+
+%SOX Wenche
+
+%NOx Hilde
+
+%redN Hilde 
+
+%PM Svetlana
+
+%OC and EC and 'do the organic fraction increase?': David & Karl Espen
+For EC and OC we have calculated observed and modelled trends for 15 sites across Europe for the period 2010--2019. A reduction (of ca. 4.5~\%/yr) in observed EC was found, and a similar reduction was found for OC in the winter months (when OC is expected to be most sensitive to primary anthropogenic emissions rather than to OA associated with biogenic sources). These trends suggest that abatement measures are having some success in reducing both EC and OC in Europe, especially in wintertime.  The model reproduced modelled EC values and trends quite well, but underpredicted OC, both in terms of absolute values and trends. This underprediction is at least partly due to the omission of condensable organics in the reported emissions from many countries. 
+%
+The carbonaceous fraction appears particularly important for a
+further reduction in the observed \pmfine mass concentration in Europe,
+although effort is needed to separate its natural and anthropogenic
+fraction to get a quantitative overview of the abatable fractions.
 
 
-%\subsubsection*{Reduced nitrogen in Europe}  
-%EMEP-MSC-W model calculations for the years 2005, 2017 and 2030 have been performed, assuming official EMEP emissions for 2005 and 2017 and NEC Directive obligations for 2030.
-%Emissions of ammonia have decreased from 2005 to 2017, 
-%and further reductions are projected for 2030. However, these reductions are much smaller than the corresponding reductions in \sox and \nox 
-%emissions. EMEP MSC-W model calculations predict that these differences in emission reductions lead to an increasingly smaller fraction of ammonia being converted to ammonium, likely impacting the ability of controlling \PM[2.5] by additional reductions of ammonia 
-%emissions on top of NEC2030. 
+%Ozone Sverre
+Trends in six annual percentiles of daily maximum O$_3$ as well as three aggregated metrics (AOT40 for crops, AOT40 for forests and SOMO35) were calculated for the period 2000-2019. For the high percentiles as well as for the three metrics both the model values and the observations show a decrease during this period as an average. For stations north of 49 \degrees N ..
 
-%Following the emission reductions, depositions of reduced nitrogen are decreasing in Europe. As the reductions in \nox emission are larger than for ammonia, the fraction of reduced versus total deposition of nitrogen is increasing and is projected to reach more than 70\% in large parts of Europe by year 2030. Further reductions in ammonia emissions would thus efficiently reduce the deposition of reduced and also total nitrogen in the future.
 
-%The effects of ammonia emissions on \chem{PM_{2.5}} 
-%concentrations and the deposition of oxidised 
-%nitrogen have been calculated for the years 2005, 2017 and 
-%2030. 
-% \PM[2.5] particles (ammonium sulphates and ammonium nitrate) are formed from ammonia limited by the availability of sulphate and HNO$_3$. With the much larger decrease in \chem{SO_x} and \chem{NO_x} emissions than ammonia emissions, followed by lower production of  sulphate and HNO$_3$, a smaller fraction of ammonia is converted to ammonium. This will likely impact the ability of controlling \PM{2.5} by further reductions of ammonia 
-%emissions. \\%The excess of ammonia is smaller in the winter months, and further reductions in ammonia emissions (beyond NEC2030) are most efficient for the winter season.\\
+%Exceedances of critical loads Hilde
 
-%As a result 
-%both \chem{PM_{2.5}} and depositions of reduced nitrogen 
-%are reduced.  The formation of ammonium is limited by the 
-%availability of sulphate and HNO$_3$ restricting  
-%the mass fraction of ammonium in secondary inorganic aerosols 
-%to roughly 25\% for all 3 years. 
+%Note on validity Hilde
 
-%The increasing mismatch 
-%between ammonium and NOx emissions results in an increase 
-%in the percentage of reduced versus total nitrogen 
-%depositions. By 2030 this percentage is expected to 
-%reach 70\% or more over large parts of Europe.\\
+Unfortunately, the EMEP observational network is dominated by sites in the western part of the EMEP domain and has hardly any coverage in the EECCA and western Balkan area. Therefore, the assessment discussed in above is only valid for a part of the EMEP domain. Furthermore, the development of emissions in the western and eastern part of the EMEP domain follow different patterns, with clear decreases of all pollutants in the western countries  but more stable (albeit gradually decreasing for most pollutants) in the eastern part of the domain over the 2000-2019 period. Thus, the trends in the eastern part of the EMEP domain are expected to be different than those presented here for the western part of the domain. Note however, that the uncertainties related to emissions and their trends in the eastern countries are large.
+
+
+
+
+
+
+
+
 
 
 %Technical EMEP Developments
@@ -175,7 +131,7 @@ Short summary of the chapter
 
 The EMEP MSC-W model code has been upgraded in a number of ways. 
 A 19-sector emissions system (GNFR-CAMS) was introduced into the code. Emissions for soil NO, DMS, and aircraft were updated using results from the CAMS81 project. 
-The  fine/coarse fractions for sea-salt and nitrate were modified. Emissions and the chemical mechanism were adapted to explicitly track GNFR sector C emissions (residential). Revised global monthly emission factors were produced, and use of a global time-zone map introduced. The default Kz  and Hmix schemes were changed. The local fraction methods were extended, and code for the many configuration options was simplified. 
+The  fine/coarse fractions for sea-salt and nitrate were modified. Emissions and the chemical mechanism were adapted to explicitly track GNFR sector C emissions (residential). Revised global monthly emission factors were produced, and use of a global time-zone map introduced. The default Kz and Hmix schemes were changed. The local fraction methods were extended, and code for the many configuration options was simplified. 
 
 
 
