--- a/chapterMeasurementDevelopments.tex
+++ b/chapterMeasurementDevelopments.tex
@@ -11,8 +11,7 @@ The complexity in the monitoring program with respect to the number of variables
 
 The index is defined for level 1 parameters only, and is calculated based on the data reported in comparison with the expected. EMEP recommends one site pr 50.000 km$^{2}$, but this target number is adjusted for very large countries (i.e. KZ, RU, TR and UA). The components and number of variables to be measured in accordance to the strategy are as follows: major inorganic ions in precipitation (10 variables), major inorganic components in air (13 variables), ozone (1 variable), PM mass (2 variables) and heavy metals in precipitation (7 variables). For heavy metals, the sampling frequency is weekly, and for the other components it is daily or hourly (ozone). Based on the relative implementation of the different variables, the index has been given the following relative weights: Inorganics in precipitation: 30\%, inorganics in air: 30\%, ozone: 20\%, PM mass: 10\%, heavy metals: 10\%.
 
-Figure~\ref{fig:Index-for-implementation} summarises implementation in 2019 compared to 2000, 2005 and 2010. The countries are sorted from left to right with increasing index for 2019. Slovakia,  Estonia, The Netherlands, Denmark, and Switzerland have almost complete programs with an index of 90\% or higher. Small countries generally comply better (due to more easily satisfying the site density requirements). Since 2010, 35\% of the Parties have improved their monitoring programme,  while 37\% have a decrease. Improvements are seen in e.g. France, Croatia and Belgium.  One Party, Malta, has reported data in 2019 and not in 2010, while Georgia, Moldova, Montenegro and Romania have stopped reporting/measuring. In Figure~\ref{fig:EMEP-measurement-network} in Chapter~\ref{Obs_2019}, the geographical distribution of level 1 sites is shown for 2019.  
-In large parts of Europe, implementation of the EMEP monitoring strategy is far from satisfactory. 
+Figure~\ref{fig:Index-for-implementation} summarises implementation in 2019 compared to 2000, 2005 and 2010. The countries are sorted from left to right with increasing index for 2019. Slovakia,  Estonia, The Netherlands, Denmark, and Switzerland have almost complete programs with an index of 90\% or higher. Small countries generally comply better (due to more easily satisfying the site density requirements). Since 2010, 35\% of the Parties have improved their monitoring programme,  while 37\% have a decrease. Improvements are seen in e.g. France, Croatia and Belgium.  One Party, Malta, has reported data in 2019 and not in 2010, while Georgia, Moldova, Montenegro and Romania have stopped reporting/measuring. In Figure~\ref{fig:EMEP-measurement-network} in Chapter~\ref{Obs_2019}, the geographical distribution of level 1 sites is shown for 2019.  In large parts of Europe, implementation of the EMEP monitoring strategy is far from satisfactory. 
 
 \begin{figure}
 	\centering
@@ -20,7 +19,7 @@ In large parts of Europe, implementation of the EMEP monitoring strategy is far 
 	\caption{\label{fig:Index-for-implementation}Index for implementation of the EMEP monitoring strategy, level 1 based on what has been reported for 2000, 2005, 2010 and 2019. {*} means adjusted land area.}
 \end{figure}
 
-For the level 2 parameters, an index has not been defined, but mapping the site distribution illustrate the compliance to the monitoring strategy. 56 sites from 21 different Parties reported  at least one of the required  EMEP level 2 parameters relevant to this report (aerosols (50 sites), photo-oxidants (16 sites) and atmospheric tracers (8 sites)). One should note that some of these sites have been reporting data to ACTRIS (the European Research Infrastructure for the observation of Aerosol, Clouds and Trace Gases) and not to EMEP, but they have been included here in the overview since the observations are still comparable with those of EMEP. The sites with measurements of POPs and heavy metals are covered in the EMEP status report published by MSC-E (EMEP Status report 2/2021).  Figure~\ref{fig:levell2-sites} shows that level 2 measurements of aerosols have better spatial coverage than oxidant precursors (VOC + methane) and atmospheric tracers. Few sites have a complete measurement program, and only 12 sites have a complete aerosol program. For oxidant precursors and atmospheric tracers, there are ongoing improvement in the measurement capabilities resulting from development in ACTRIS in co-operation with EMEP and the WMO Global Atmospheric Watch Programme (GAW).
+For the level 2 parameters, an index has not been defined, but mapping the site distribution illustrate the compliance to the monitoring strategy. 56 sites from 21 different Parties reported  at least one of the required  EMEP level 2 parameters relevant to this report (aerosols (50 sites), photo-oxidants (16 sites) and atmospheric tracers (8 sites)). One should note that some of these sites have been reporting data to ACTRIS (the European Research Infrastructure for the observation of Aerosol, Clouds and Trace Gases) and not to EMEP, but they have been included here in the overview since the observations are still comparable with those of EMEP. The sites with measurements of POPs and heavy metals are covered in the EMEP status report published by MSC-E (EMEP Status report 2/2021).  Figure~\ref{fig:levell2-sites} shows that level 2 measurements of aerosols have better spatial coverage than oxidant precursors (VOC + methane) and atmospheric tracers. Few sites have a complete measurement program, the aerosol program is most developed with 12 sites having a complete aerosol program. For oxidant precursors and atmospheric tracers, there are ongoing improvement in the measurement capabilities resulting from development in ACTRIS in co-operation with EMEP and the WMO Global Atmospheric Watch Programme (GAW).
 
 \begin{figure}[h!]
  \centering
@@ -51,7 +50,7 @@ An online data submission and validation tool (\url{http://ebas-submit-tool.nilu
 The requirement of checking the data files using the submission tool has significantly improved the correctness in the data files submitted, but still there are Parties not using the submission tool and report by e-mails. EMEP/CCC strongly encourage all the Parties to use the submission tool, which in fact is mandatory for submitting all the data to EMEP, unless otherwise have been agreed upon. In the coming years there will be further focus on improving the data submission tools to make it easier for the data provider to report correct and consistent data. 
 
 The EMEP data are extensively used. In 2009, a user statistic was implemented for the EBAS database infrastructure.  
-The statistic counts how much data are downloaded, displayed or plotted. Figure~\ref{fig:downloads} shows the access requests for EMEP data per year (about 300 thousand annual datasets). There was a big jump in 2013. This was the year when an automatic system for distributing all the data in EBAS to specific users was implemented. The number of downloads increased in 2020 compared to 2019. 
+The statistic counts how much data are downloaded, displayed or plotted. Figure~\ref{fig:downloads} shows the access requests for EMEP data per year (about 300 thousand annual datasets). There was a big jump in 2013. This was the year when an automatic system for distributing all the data in EBAS to specific users was implemented. The number of downloads increased somewhat in 2020 compared to 2019. 
 
 \begin{figure}[h]
 \centering
@@ -59,7 +58,7 @@ The statistic counts how much data are downloaded, displayed or plotted. Figure~
 \caption{\label{fig:downloads}Access of EMEP data, number of annual dataset (compounds) per year.}
  \end{figure}
 
-There is ongoing work to make the  access of data even more flexible to meet several of the user needs. In example using other platforms, like THREDDS (\url{https://thredds.nilu.no/thredds/catalog/ebas/catalog.html}) where NetCDF files are extracted from EBAS allowing faster access and the possibility to create more individual specific defined outputs for plotting, statistics, aggregates etc. Further implementing primary DOI for data in EBAS are also being developed. The development of the database infrastructure is inline with the FAIR principles (findable, accessible, interoperable and reusable).
+There is ongoing work to make the  access of data even more flexible to meet several of the user needs. In example using other platforms, like THREDDS (\url{https://thredds.nilu.no/thredds/catalog/ebas/catalog.html}) where NetCDF files are extracted from EBAS allowing faster access and the possibility to create more individual specific defined outputs for plotting, statistics, aggregates etc.: Further, a system for issuing Persistent Identifiers of datasets (Digital Object Identifiers – DOIs) is currently under development/implementation. The development of the database infrastructure is scoped to comply with the FAIR principles (findable, accessible, interoperable and reusable).
 
 \clearpage
 \bibliographystyle{copernicus}         % change bibliography-name after each
