--- a/chapterStatus2019.tex
+++ b/chapterStatus2019.tex
@@ -86,7 +86,7 @@ runs. The horizontal resolution is \resZO, with 20 vertical layers
  derived from ECMWF-IFS(cy46r1) simulations (see Section~\ref{sec:meteo}). The
  land-based emissions have been derived from the 2021 official data
  submissions to UNECE CLRTAP \citep{CEIP2021}, as documented in
- Chapter \ref{ch:emis2019}. In the Base run for pollution assessments and the source-receptor runs included in this report, the officially submitted \PM[10] and \PM[2.5] emissions from residential combustion (GNFR sector C) were partly substituted by an emission data set provided by TNO for 2015 (the so-called \textit{REF2.1} scenario used in the Copernicus Atmosphere Monitoring Service contract CAMS50-II), see chapter \ref{sec:EmisSVOC} The data set by TNO represents the best-to-date available estimate of residential combustion emissions of PM, accounting for condensable organics in a consistent way. 
+ Chapter \ref{ch:emis2019}. In the Base run for pollution assessments and the source-receptor runs included in this report, the officially submitted \PM[10] and \PM[2.5] emissions from residential combustion (GNFR sector C) were partly substituted by an emission data set provided by TNO for 2015 (the so-called REF2.1 scenario used in the Copernicus Atmosphere Monitoring Service contract CAMS50-II), see chapter \ref{sec:EmisSVOC} The data set by TNO represents the best-to-date available estimate of residential combustion emissions of PM, accounting for condensable organics in a consistent way. 
  
  Emissions from international shipping
  within the EMEP domain are derived from the CAMS global shipping
@@ -207,7 +207,7 @@ north to south. The concentrations are below 2-5 \ug in Northern
 Europe, increasing to 5-15 \ug in the mid-latitudes and further south,
 \PM[2.5] levels being somewhat lower than those of
 \PM[10]. Figure~\ref{fig:PMin2019} displays fairly homogeneous modelled levels of regional background PM over most of Central and Western Europe,
-with \PM[10] in excess of 20 \ug in the Po Valley and on Cyprus. The observations also show \PM[10] concentrations above 20 \ug in Slovakia. \PM[2.5] concentrations are below 10 \ug over most of EMEP domain (except the south/southeast most regions), or otherwise between 10 and 15 \ug in  parts of Benelux, Poland, Hungary and some of Balkan countries). The only site with observed annual mean \PM[10] above 15 \ug (namely 16.3 \ug) was Hungarian K-Puszta. Furthermore, the model calculates high PM for the regions east of the Caspian Sea (parts of Kazakhstan, Uzbekistan, Turkmenistan) and over the southern Mediterranean, with annual mean concentrations in excess of 50 \ug. These high PM concentrations are due to windblown dust from the arid soils and deserts of Central Asia, though the accurateness of the calculated values still cannot be verified due to the lack of observations in these regions.
+with \PM[10] in excess of 20 \ug in the Po Valley and on Cyprus. The observations also show \PM[10] concentrations above 20 \ug in Slovakia. \PM[2.5] concentrations are below 10 \ug over most of EMEP domain (except the south/southeast most regions), or otherwise between 10 and 15 \ug in  parts of Benelux, Poland, Hungary and some of Balkan countries). The only site with observed annual mean \PM[10] above 15 \ug (namely 16.3 \ug) was Hungarian K-Puszta. Furthermore, the model calculates high PM for the regions east of the Caspian Sea (parts of Kazakhstan, Uzbekistan, Turkmenistan) and over the southern Mediterranean, with annual mean concentrations in excess of 50 \ug. These high PM concentrations are due to windblown dust from the arid soils and deserts of Central Asia, though the precision of the calculated values still cannot be verified due to the lack of observations in these regions.
 
 There is a good agreement between the modelled and observed
 distributions of annual mean \PM[10] and \PM[2.5], with correlation
