--- a/chapterTrendsSandN.tex
+++ b/chapterTrendsSandN.tex
@@ -732,18 +732,17 @@ Table~\ref{tab:KEX1} presents the absolute and relative changes over 2010-2019 f
 Fig.~\ref{fig:KEX1} illustrates the statistics of the reductions in EC over the period 2010-2019, and for different seasons. 
 
 %
-A  reduction (-4.5$\pm$1.5~\%/yr, Tab.~\ref{tab:KEX1}) 
-in elemental carbon (EC) for 2010--2019 was
+Considering first the observed trends in elemental carbon (EC) for 2010--2019, a  reduction (-4.5$\pm$1.5~\%/yr, Tab.~\ref{tab:KEX1}) 
+ was
 calculated for the 15 sites assessed, which is
 quite comparable to the reduction (-5.0$\pm$0.9~\%/yr)
 calculated for the eleven sites where the reduction was statistically
 significant. The reduction was rather similar considering these eleven
 sites, ranging from -4.2~\%/yr to -5.8~\%/yr for ten out of eleven
 sites. %, thus we see no apparent spatial pattern in the reductions
-(Fig.~\ref{fig:OCtrends}). 
 The largest reduction was seen amongst the sites with the
 highest EC levels, i.e., at Iskrba (-7~\%/yr) in Slovenia and at Ispra
-(-5.8~\%/yr) in the Po Valley region in Northern Italy. Notably, these
+(-5.8~\%/yr) in the Po Valley region in Northern Italy (Fig.~\ref{fig:ECtrends}). Notably, these
 were the only sites where a statistically significant reduction was
 observed for all seasons, being most pronounced in summer, although
 by a small margin. When considering all sites, the reduction was most
@@ -751,7 +750,7 @@ pronounced in summer and fall (Tab.~\ref{tab:KEX1},Fig.~\ref{fig:KEX1}), but the
 that there is a minor seasonal variability in the reduction of EC. It can be noted though that
 there are more sites with significant trends (p-values $<$ 0.05)  in summer than winter (Fig.\ref{fig:ECarrows}).
 
-Fig.~\ref{fig:KEX1} illustrates the statistics of the reductions in EC  over the period 2010-2019, and for different seasons. For EC the model is seen to capture the year to year changes very well over the ten years, and captures well the relative changes which are ca. -4~\%/yr in all seasons. Larger differences are seen in the absolute changes (which may reflect the difficulties with the EC emissions mentioned in Sect.~\ref{ss:IssuesECOC}).
+Fig.~\ref{fig:KEX1} illustrates the statistics of the reductions in EC  n both observed and model results over the period 2010-2019, and for different seasons. For EC the model is seen to capture the year to year changes very well over the ten years, and captures well the relative changes which are ca. -4~\%/yr in all seasons. Larger differences are seen in the absolute changes (which may reflect the difficulties with the EC emissions mentioned in Sect.~\ref{ss:IssuesECOC}).
 These points about model-measurement comparison for EC are discussed further in Sect.~\ref{ss:DiscECOC}.
 
 \begin{table}
@@ -951,9 +950,10 @@ Levoglucosan & annual  & -2.5 (0.043)        &  -2.48 (0.024)   & -5.2  (0.032) 
 \parbox{11.9cm}{
 
 Notes:
-(a) Values for 2008-2018 use same procedure as for 2008-2019 and 2010-2019. Numbers
+(a) Values for 2008-2018 use same procedure as for 2008-2019 and 2010-2019.
+Due to minor screening differences, numbers
 differ slightly from results of \citet{Yttri2021}, which had 2008-2018 trends of -4.2~\%/yr for EC and -2.8~\%/yr for levoglucosan.\\
-\COMMENT{ISSUES:\\ Explain diffs to Yttri et al 2021 and 2008-2018 trends better?\\
+\SKIP{ISSUES:\\ Explain diffs to Yttri et al 2021 and 2008-2018 trends better?\\
 p-values of 1 look odd. Do we have any good words for this?}\\
 }
 \end{table}
@@ -966,11 +966,11 @@ As discussed in Sect.~\ref{ss:trendsEC} there is only a minor seasonal variabili
 was most pronounced in spring and summer at the Birkenes Observatory in
 southern Norway for 2001--2018, arguing that this was due to influence
 from less abated sources such as domestic heating in winter and fall. This argument was
-supported by a lower (-2.8~\%/yr) reduction for the biomass burning
+supported by a smaller change (-2.8~\%/yr) for the biomass burning
 tracer levoglucosan (2008--2018) than for EC (-4.2~\%/yr) (these trend numbers are from \citeauthor{Yttri2021}, and differ slightly from trends calculated for this report, c.f. Tab.~\ref{tab:BirkenesTrends}). In this study, however, 
-we calculated a -5.2~\%/yr reduction for the biomass burning tracer
+we calculated a -5.2~\%/yr change (i.e. reduction) for the biomass burning tracer
 levoglucosan observed at the Birkenes Observatory for 2010-2019, which is
-higher than the -4.2~\%/yr calculated for EC.
+greater than the -4.2~\%/yr change calculated for EC.
 %, which might suggest that abatement of carbonaceous aerosol from biomass burning has been equally successful as that of EC from fossil fuel sources. This 
 This finding seems to contradict the conclusion made
 by \citet{Yttri2021}, but the differences in trends using different time-windows (c.f.Tab.~\ref{tab:BirkenesTrends}) suggests it is difficult to draw firm conclusions about these changes.
@@ -982,7 +982,7 @@ Europe and Western Russia \citep{Yttri2021}, our findings for Birkenes
 are likely to be representative for a larger part of Europe. However,
 changing footprints  for the Birkenes site may also affect both the trends and
 the relative contributions of biomass burning and residential wood combustion (RWC).
-Figure~\ref{fig:gnfrCtrends} shows that for some countries, for example France, GNFR C \pmfine emissions have been in constant decline throughout the 2000s. Declines are seen in other countries from around 2010 onwards also. Thus, abatemement of RWC emissions seem to be in place for many countries within the Birkenes footprint area, though the magnitude of the contribution from different countries will of course vary from year to year.
+Figure~\ref{fig:gnfrCtrends} shows that for some countries, for example France, GNFR C \pmfine emissions have been in constant decline throughout the 2000s. Declines are seen in other countries from around 2010 onwards also. Thus, abatemement of RWC emissions seem to be progressing for many countries within the Birkenes footprint area, though the magnitude of the contribution from different countries will of course vary from year to year.
 
 The issues with condensable organics (Sect.~\ref{ss:IssuesECOC}) impact these estimates of \pmfine emissions and their trends also, and Figure~\ref{fig:gnfrCtrends} is a good illustration of this. France is a country which includes condensables, and Germany is one that does not \citep{CONDws2020}. This difference is a major reason for the magnitude of the French GNFR C emissions compared to those of the more highly populated Germany. 
 
@@ -1069,17 +1069,17 @@ less successful abatement of anthropogenic sources cannot be excluded.
   for OC (upper) and EC (lower). The solid line in the left panel shows
   the average annual mean for all sites and the shaded area the 95\%
   confidence interval. For explanation of the statistics in the figure,
-  see Fig. X.1. \label{fig:KEX3}
+  see Fig.~\label{fig:KEX3}
  }
 \end{figure}
 
 As focused abatement of anthropogenic secondary inorganic aerosol (SIA)
-precursors have reduced ambient SIA levels substantially (Sect. \QUERY{X.?}),
+precursors have reduced ambient SIA levels substantially (Sects.~\ref{sec:Trends_sulfur}--\ref{sec:Trends_reduced nitrogen }), 
 other, non-SIA fractions are likely to contribute an increasing fraction
-of PM. For the EC fraction of \pmfine, however, there was a -2.4$\pm$1.1~\%/yr
-reduction for 2010--2019 (Fig.~\ref{fig:KEX3}, Tab.~\ref{tab:KEX3}), showing that EC has been
+of PM. For the EC fraction of \pmfine, however, there was a reduction,  -2.4$\pm$1.1~\%/yr, 
+for 2010--2019 (Fig.~\ref{fig:KEX3}, Tab.~\ref{tab:KEX3}), showing that EC has been
 more efficiently abated than the overall PM mass concentration. The model
-calculated a comparable -1.7$\pm$1.3~\%/yr reduction for the EC/\pmfine ratio
+calculated a comparable reduction (-1.7$\pm$1.3~\%/yr) for the EC/\pmfine ratio
 but predicted a minor increase at two of the sites, which was not seen for
 observed EC/\pmfine ratios. For the few sites where measurements allow for
 a harmonized data set of EC, OC, \ce{SO4^2-} and \pmfine, i.e., only including
@@ -1181,11 +1181,6 @@ Obs.  &              15 &     2 &                  0.0001 &  (-0.003, 0.0032) & 
 \subsection{Trends in EC and OC, conclusions}
 \label{ss:trendsECOCconc}
 
-\COMMENT{DS to KE: I suggest simplifying the conclusions, making the main points but avoiding the detailed numbers (which have proved sensitive to time-windows). I'll write new text first, leaving the old below, so you can see my suggestions and we can agree...}
-
-
-\COMMENT{NEW TEXT:\\}
-
 For EC and OC we have calculated observed and modelled trends for 15 sites across Europe for the period 2010--2019. It should be noted that this 10-year period is rather short for the calculation of robust trends (and we show that slightly different time-windows produce different statistics), and typically only a limited number of sites showed trends that were statistically significant even for a specific time-window. However, some features of the trend analysis seem rather consistent, and we summarise the main points here. 
 
 A reduction (of ca. 4.5~\%/yr) in observed EC was found across 15 sites across Europe for the  period 
@@ -1199,7 +1194,7 @@ For OC the model substantially underpredicts the yearly concentrations over the 
 The underprediction of OC is however explainable by the omission of condensable organics in the reported \pmfine emissions from some countries (Sect.~\ref{ss:IssuesECOC}). Although emissions estimates which include condensables (the so-called REF2 or REF2.1, Sect.~\ref{sec:EmisSVOC}) are available and were used in the status and source-receptor calculations of this report, these emissions only exist for 2015; no time-series of REF2-type emissions yet exists. The lack of significance of the calculated OC trends may also be attributed to some extent to these problems with condensables. When some countries include, and some exclude, condensables, changes in modelled OC concentrations will be very sensitive to changes in the source areas for the POA emissions entering the model.
 Although modelling of EC is also impacted by the problems with condensables, the much better agreement found for wintertime EC levels than for OC probably reflects the fact that EC has a wider variety of emission sources in that season (e.g. vehicles) than OC, which is much more dominated by residential wood-burning.
 
-\COMMENT{This bit is almost unchanged from original:\\}
+
 The EC fraction of \pmfine (\QUERY{trend }-2.4$\pm$1.1~\%/yr) decreased at all
 sites, and at a level equal to, or higher than, the \ce{SO4^2-} fraction. The
 change in OC fraction was more scattered with a substantial and
@@ -1217,7 +1212,7 @@ fraction to get a quantitative overview of the abatable fractions.
 \bigskip
 
 
-\COMMENT{\bigskip ORIG TEXT, DELETE if above is okay:\\}
+\SKIP{ % COMMENT{\bigskip ORIG TEXT, DELETE if above is okay:\\}
 
 A -4.5$\pm$1.6~\%/yr reduction in EC was calculated across Europe for
 2010--2019 and the reduction was particularly consistent amongst the
@@ -1262,17 +1257,17 @@ Europe. The carbonaceous fraction appears particularly important for a
 further reduction in the observed \pmfine mass concentration in Europe,
 although effort is needed to separate its natural and anthropogenic
 fraction to get a quantitative overview of the abatable fractions.\\
+}
 
 
-\COMMENT{NEW AND PRELIM! TEXT FOR EXECUTIVE SUMMARY here and I can move it later:}\\
-
-For EC and OC we have calculated observed and modelled trends for 15 sites across Europe for the period 2010--2019. A reduction (of ca. 4.5~\%/yr) in observed EC was found, and a similar reduction was found for OC in the winter months (when OC is expected to be most sensitive to primary emissions rather than SOA formation). These trends suggest that abatement measures are having some success in reducing both EC and OC in Europe, especially in wintertime.  The model reproduced modelled EC values and trends quite well, but underpredicted OC, both in terms of absolute values and trends. This underprediction is at least partly due to the omission of condensable organics in the reported emissions from some countries. 
+\SKIP{ % Now moved to ExecSummary
+For EC and OC we have calculated observed and modelled trends for 15 sites across Europe for the period 2010--2019. A reduction (of ca. 4.5~\%/yr) in observed EC was found, and a similar reduction was found for OC in the winter months (when OC is expected to be most sensitive to primary anthropogenic emissions rather than to OA associated with biogenic sources). These trends suggest that abatement measures are having some success in reducing both EC and OC in Europe, especially in wintertime.  The model reproduced modelled EC values and trends quite well, but underpredicted OC, both in terms of absolute values and trends. This underprediction is at least partly due to the omission of condensable organics in the reported emissions from many countries. 
 %
 The carbonaceous fraction appears particularly important for a
 further reduction in the observed \pmfine mass concentration in Europe,
 although effort is needed to separate its natural and anthropogenic
 fraction to get a quantitative overview of the abatable fractions.
-
+}
 
 
 \clearpage
